Update to gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,55 @@
 *.exe
 *.out
 *.app
+
+*.udf
+*.apk
+*.o
+*.a
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcworkspace/contents.xcworkspacedata
+**/*.xcodeproj/*
+!**/*.xcodeproj/project.pbxproj
+.DS_Store
+.gradle
+Thumbs.db
+npm-debug.log
+/project/cocos2d-test/cocos2d/
+/project/cocos2d-test/bin
+/project/cocos2d-test/proj.android/assets/
+/project/cocos2d-test/proj.android/bin/
+/project/cocos2d-test/proj.android/gen/
+/project/cocos2d-test/proj.android/libs/armeabi
+/project/cocos2d-test/proj.android/libs/google-play-services_lib
+/project/cocos2d-test/proj.android/libs/library-debug.aar
+/project/cocos2d-test/proj.android/local.properties
+/project/cocos2d-test/proj.android-studio/assets/
+/project/cocos2d-test/proj.android-studio/bin/
+/project/cocos2d-test/proj.android-studio/gen/
+/project/cocos2d-test/proj.android-studio/libs/armeabi
+/project/cocos2d-test/proj.android-studio/libs/google-play-services_lib
+/project/cocos2d-test/proj.android-studio/libs/library-debug.aar
+/project/cocos2d-test/proj.android-studio/local.properties
+/project/cocos2d-test/proj.android-studio/obj/
+/project/cocos2d-test/proj.android-studio/obj/
+/project/cocos2d-test/proj.android-studio/app/libs/armeabi/
+/project/cocos2d-test/proj.android-studio/app/obj/
+/project/cocos2d-test/proj.android-studio/app/assets
+
+/project/cocos2d-test/cocos2d/cocos/platform/android/java/local.properties
+/project/cocos2d-test/cocos2d/cocos/platform/android/libcocos2dx/build
+/project/cocos2d-test/publish/
+/project/cocos2d-test/proj.android/ant.properties
+/project/cocos2d-test/proj.android/build
+/project/cocos2d-test/proj.ios_mac/Pods
+/project/cocos2d-test/cocos2d/build/build
+/project/cocos2d-test/proj.ios_mac/build/
+Breakpoints_v2.xcbkptlist
+UserInterfaceState.xcuserstate
+/project/cocos2d-test//Resources/*
+!/Resources/Sounds
+!/Resources/Particles
+!/Resources/Fonts
+/.keystore
+/project/cocos2d-test//Classes/EnvPrivate.h
